26) Update sta driver to 2.4.0.4.<br>
27) Update ap driver to 2.5.0.4.<br>
28) Add /proc/rt3052/esw_cnt for traffic statistic per switch port.(need add in webui).<br>
29) Support Ralink RT3883+RT5392 referenece board.<br>
30) Fix mips 24kec "Wrong EPC on Exceptional J/JAL Targets" issue.<br>
31) Fix raeth driver: hardware checksum offload only support ipv4 packets.<br>
32) Update ated: magic number check after wifi driver version 2.5.<br>
33) Kernel now support IPv6 Ready logo.<br>
34) Raeth re‐initialize frame engine if TX timeout occurred.<br>
35) Watchdogs supprot user and kernel mode watchdog module.<br>
36) In bridge or ethernet converter mode switch need reconfigure to novlans mode.<br>
37) Rework switch init code. More correct and speedup.<br>
38) Blink sec+wps led at boot before start goahead.<br>
39) Asinc blink wps/sec led if goahead not found.<br>
40) Update rw_init bin files for RT3x5x and add images for new chips.<br>
41) Fix some fields enable/disable in skb.<br>
42) Add init script for transmission daemon.<br>
43) Libcurl update to 7.21.7 version.<br>
44) Small kernel code arp fixups.<br>
45) Update ralink apps.<br>
46) Support new igmp snooping version in igmpproxy.<br>
47) Add variable igmpSnoopMode. Values=n/f or NULL (default NULL=auto, n=none/disabled,f=force enabled. Need add webui).<br>
48) Fix some leasks and more safe libnvram.<br>
49) Igmpproxy code sync with upstream git.<br>
50) Fix build at some distro.<br>

suspended) Add skb reuse support.<br>
suspended) Nvram move to kernel mode. This fix some memleaks and concurent acess to mtd issue.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>