@@ -668,6 +668,8 @@
 48) Fix some leasks and more safe libnvram.<br>
 49) Igmpproxy code sync with upstream git.<br>
 50) Fix build at some distro.<br>
+51) Fix dirty inode set in fs subsystem.<br>
+52) Add support volume_id for vfat filesystem.<br>
 
 suspended) Add skb reuse support.<br>
 suspended) Nvram move to kernel mode. This fix some memleaks and concurent acess to mtd issue.<br>
